--- a/MigrationService/Views/Applications/Delete.cshtml
+++ b/MigrationService/Views/Applications/Delete.cshtml
@@ -2,6 +2,16 @@
 
 @{
     ViewData["Title"] = "Удалить заявление";
+
+    var typeDisplay = Model.Type switch
+    {
+        "Виза" => "Виза",
+        "Вид на жительство" => "Вид на жительство",
+        "Рабочая виза" => "Рабочая виза",
+        "Студенческая виза" => "Студенческая виза",
+        "Воссоединение семьи" => "Воссоединение семьи",
+        _ => Model.Type
+    };
 }
 
 <div class="container mt-4">
@@ -19,22 +29,11 @@
                     <dt class="col-sm-3">Сотрудник</dt>
                     <dd class="col-sm-9">@Html.DisplayFor(model => model.Officer.FullName)</dd>
 
-                    <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Type)</dt>
-                    <dd class="col-sm-9">@(Model.Type switch {
-                        "Visa" => "Виза",
-                        "Residence" => "ВНЖ",
-                        "Citizenship" => "Гражданство",
-                        _ => Model.Type
-                    })</dd>
+                    <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Type)</dt>
+                    <dd class="col-sm-10">@typeDisplay</dd>
 
                     <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Status)</dt>
-                    <dd class="col-sm-9">@(Model.Status switch {
-                        "Pending" => "На рассмотрении",
-                        "In Progress" => "В процессе",
-                        "Approved" => "Одобрено",
-                        "Rejected" => "Отклонено",
-                        _ => Model.Status
-                    })</dd>
+                    <dd class="col-sm-9">@Model.Status</dd>
 
                     <dt class="col-sm-3">@Html.DisplayNameFor(model => model.SubmissionDate)</dt>
                     <dd class="col-sm-9">@Html.DisplayFor(model => model.SubmissionDate)</dd>
