--- a/MigrationService/Views/Courses/Index.cshtml
+++ b/MigrationService/Views/Courses/Index.cshtml
@@ -38,6 +38,7 @@
             <td>@c.RequiredHours</td>
             <td>@(c.IsActive ? "Да" : "Нет")</td>
             <td>
+                <a class="btn btn-sm btn-primary" href="@Url.Action("Details", new { id = c.CourseID })">Детали</a>
                 <a class="btn btn-sm btn-secondary" href="@Url.Action("Edit", new { id = c.CourseID })">Изменить</a>
                 <a class="btn btn-sm btn-danger" href="@Url.Action("Delete", new { id = c.CourseID })">Удалить</a>
             </td>
